<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.transenigma.iskconapp.login"
    android:background="#ffffff"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:background="#ffffff">

        <ImageView
            android:src="@drawable/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo"
            android:id="@+id/image"
            android:layout_gravity="center_horizontal" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/myLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:windowSoftInputMode="stateHidden"
                android:hint="@string/email_hint"
                android:textColorHint="@android:color/holo_red_light" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/myLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"

                android:textColorHint="@android:color/holo_red_light" />
        </android.support.design.widget.TextInputLayout>

<!--<com.transenigma.iskconapp.CaptchaView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/myLoginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login_button"
            android:onClick="clickLoginBtn"
            android:layout_gravity="center"
            android:background="@android:color/holo_red_light"
            android:textColor="#ffffff" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView android:id="@+id/myForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Forgot_Pass"
        android:gravity="center"
        android:textSize="16sp"
        android:onClick="clickForgotPass" />

    <TextView android:id="@+id/myLoginSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/singup_text"
        android:gravity="center"
        android:textSize="16sp"
        android:onClick="clickLoginSignup" />

</LinearLayout>



        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">


        </LinearLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/imageButton"
                android:layout_gravity="center"
                android:text="Log in with Google"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:background="#d34836"
                android:paddingRight="35dip"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:onClick="clickGoogleSignInBtn"
                android:drawableLeft="@drawable/googleb"/>



        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="45dp"-->
            <!--android:id="@+id/imageButton2"-->
            <!--android:src="@drawable/mygoogle"-->
            <!--android:onClick="clickGoogleSignInBtn" />-->
        <!--<ProgressBar-->
            <!--android:id="@+id/progressBar1"-->
            <!--style="?android:attr/progressBarStyleLarge"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/textView1"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_gravity="center_horizontal" />-->

    </LinearLayout>

</ScrollView>
